--- a/index.html
+++ b/index.html
@@ -599,15 +599,18 @@
     <header>
       <h1>発達支援ノワール</h1>
       <p>放課後等デイサービス<br>児童発達支援</p>
-    </header>
-    
-    <div class="small-circle-container">
-      <div class="small-circle"></div>
-      <div class="small-circle"></div>
-      <div class="small-circle"></div>
-      <div class="small-circle"></div>
-      <div class="small-circle"></div>
+  <div class="header-inner">
+    <div class="logo">
+      発達支援ノワール
     </div>
+
+    <nav class="menu">
+      <a href="#about">ご利用料金>>>
+      <a href="#service">サービス</a>
+      <a href="#contact">お問い合わせ</a>
+    </nav>
+  </div>
+</header>
     
     <div class="overlay-image">
      <img src="お子さまのお困りごとありませんか.png" alt="お子様のお困りごとありませんか？">
