--- a/index.html
+++ b/index.html
@@ -31,14 +31,41 @@
         z-index: -1; opacity: 0.7;
       }
       header {
-        background-color: rgba(169, 169, 169, 0.5);
-        color: #fff;
-        text-align: center;
-        padding: 40px 20px;
-        margin: 0;
-        position: relative;
-        z-index: 1;
-      } 
+  background-color: #ffffff; /* 白ヘッダー */
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  padding: 16px 20px;
+  position: relative;
+  z-index: 10;
+}
+
+/* ヘッダーの中身を左右に分ける */
+.header-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* 左：ロゴ文字（フォント維持） */
+.logo {
+  font-family: 'Kiwi Maru', cursive;
+  font-size: 1.4em;
+  color: #9F987D;
+}
+
+/* 右：メニュー */
+.menu a {
+  margin-left: 20px;
+  text-decoration: none;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-size: 0.95em;
+  color: #9F987D;
+}
+
+.menu a:hover {
+  opacity: 0.7;
+}
       header h1 {
         font-family: 'Kiwi Maru', cursive; font-size: 1.5em;
         margin: 0; letter-spacing: 2px; color: #fff;
@@ -597,16 +624,14 @@
   <body>
     <div class="background-image"></div>
     <header>
-      <h1>発達支援ノワール</h1>
-      <p>放課後等デイサービス<br>児童発達支援</p>
-  <div class="header-inner">
+       <div class="header-inner">
     <div class="logo">
       発達支援ノワール
     </div>
 
     <nav class="menu">
-      <a href="#about">ご利用料金>>>
-      <a href="#service">サービス</a>
+      <a href="#content料金">ご利用料金</a>
+      <a href="#access">アクセス</a>
       <a href="#contact">お問い合わせ</a>
     </nav>
   </div>
