--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         z-index: -1; opacity: 0.7;
       }
       header {
-  background-color: #ffffff; /* 白ヘッダー */
-  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  background-color: rgba(169, 169, 169, 0.5); /* ← 元の色に戻す */
+  box-shadow: none; /* 影も元に戻すなら消す */
   padding: 16px 20px;
   position: relative;
   z-index: 10;
