--- a/index.html
+++ b/index.html
@@ -645,9 +645,9 @@
   <button class="slide-arrow left" aria-label="前へ">〈</button>
 
   <div class="slider">
-    <img src="景色1.png" alt="活動の様子">
-    <img src="景色2.png" alt="室内の雰囲気">
-    <img src="景色3.png" alt="教材や環境">
+    <img src="景色1.jpg" alt="活動の様子">
+    <img src="景色2.jpg" alt="室内の雰囲気">
+    <img src="景色3.jpg" alt="教材や環境">
   </div>
 
  <button class="slide-arrow right" aria-label="次へ">〉</button>
