--- a/index.html
+++ b/index.html
@@ -36,15 +36,25 @@
   padding: 16px 20px;
   position: relative;
   z-index: 10;
+        padding: 32px 20px;   /* ← ここを増やす（太さの正体） */
 }
 
 /* ヘッダーの中身を左右に分ける */
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 1fr auto; /* 左・中央・右 */
   align-items: center;
-  justify-content: space-between;
+}
+
+/* 真ん中の文字 */
+.header-center {
+  text-align: center;
+  font-family: 'Kiwi Maru', cursive;
+  font-size: 1.1em;
+  color: #ffffff;
+  letter-spacing: 0.15em;
 }
 
 /* 左：ロゴ文字（フォント維持） */
@@ -625,15 +635,24 @@
     <div class="background-image"></div>
     <header>
        <div class="header-inner">
+    
+    <!-- 左 -->
     <div class="logo">
       発達支援ノワール
     </div>
 
+    <!-- 真ん中 -->
+    <div class="header-center">
+      放課後等デイサービス・児童発達支援
+    </div>
+
+    <!-- 右 -->
     <nav class="menu">
       <a href="#content料金">ご利用料金</a>
       <a href="#access">アクセス</a>
       <a href="#contact">お問い合わせ</a>
     </nav>
+
   </div>
 </header>
     
