--- a/index.html
+++ b/index.html
@@ -649,8 +649,10 @@
     <!-- 右 -->
     <nav class="menu">
       <a href="#content料金">ご利用料金</a>
+      <a href="#content料金">ご利用の流れ</a>
       <a href="#access">アクセス</a>
       <a href="#contact">お問い合わせ</a>
+      <a href="#contact">Instagram</a>
     </nav>
 
   </div>
