--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@ footer {
 </section>
 
 <footer>
-  <a href="#" id="contact-link">お問い合わせ</a>｜
-  <a href="https://www.instagram.com/noir_niigata/" target="_blank">Instagram</a>
+  <p class="small-text">
+    © 合同会社ノワール
+  </p>
 </footer>
 
 <script>
