--- a/index.html
+++ b/index.html
@@ -86,7 +86,114 @@ header {
 @media (max-width:480px) {
   .overlay-image { max-width: 400px; }
 }
+  
+/* ---------- ボックス ---------- */
+.box-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  max-width: 810px;
+  margin: 40px auto;
+}
 
+.box {
+  background-color: rgba(255, 255, 255, 0.85);
+  border-radius: 15px;
+  padding: 15px;
+  color: #555;
+  font-weight: bold;
+  text-align: left;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+  font-size: 1em;
+  position: relative;
+}
+
+.box::before {
+  content: "✓";
+  display: inline-block;
+  background-color: rgba(169,169,169,0.9);
+  color: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  margin-right: 10px;
+  font-size: 1.2em;
+}
+
+@media (max-width: 480px) {
+  .box-container {
+    grid-template-columns: 1fr;
+    width: 75%;
+    margin: 20px auto;
+    gap: 10px;
+  }
+
+  .box {
+    padding: 10px 10px 10px 30px;
+    font-size: 1.1em;
+    line-height: 1.4;
+  }
+
+  .box::before {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 0.8em;
+  }
+}
+
+/* ---------- 丸 ---------- */
+.circle-container {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0;
+}
+
+.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgba(169,169,169,1);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2em;
+  text-align: center;
+  padding: 10px;
+  box-shadow: 4px 4px 0px #696969;
+  margin-left: -20px;
+}
+
+@media (max-width: 480px) {
+  .circle {
+    width: 65px;
+    height: 65px;
+    font-size: 0.95em;
+  }
+}
+
+/* ---------- intro ---------- */
+.intro, .intro2 {
+  max-width: 630px;
+  margin: 40px auto;
+  padding: 20px;
+  text-align: center;
+  background-color: rgba(255,255,255,0.7);
+  border-radius: 140px;
+  color: #444;
+  font-size: 1.4em;
+}
+
+@media (max-width: 480px) {
+  .intro, .intro2 {
+    max-width: 85%;
+    font-size: 0.8em;
+  }
+}
+  
 /* ------------------ トグル ------------------ */
 .content流れ,
 .content料金 {
