--- a/index.html
+++ b/index.html
@@ -313,6 +313,25 @@ footer {
   <img src="お子さまのお困りごとありませんか.png">
 </div>
 
+<!-- ボックス -->
+<div class="box-container">
+  <div class="box">個別支援計画に基づいた支援</div>
+  <div class="box">専門職によるサポート</div>
+  <div class="box">保護者様との丁寧な連携</div>
+</div>
+
+<!-- 丸 -->
+<div class="circle-container">
+  <div class="circle">安心</div>
+  <div class="circle">信頼</div>
+  <div class="circle">成長</div>
+</div>
+
+<!-- intro -->
+<div class="intro">
+  お子さま一人ひとりの特性に合わせた支援を行っています
+</div>
+  
 <div class="toggle-container流れ">
   <button class="toggle-button流れ" onclick="toggleContent流れ()">ご利用開始までの流れ</button>
   <div id="content流れ" class="content流れ">
