--- a/index.html
+++ b/index.html
@@ -315,22 +315,29 @@ footer {
 
 <!-- ボックス -->
 <div class="box-container">
-  <div class="box">個別支援計画に基づいた支援</div>
-  <div class="box">専門職によるサポート</div>
-  <div class="box">保護者様との丁寧な連携</div>
+  <div class="box">言葉の遅れが気になる</div>
+  <div class="box">体を動かすのが苦手</div>
+  <div class="box">勉強についていけない</div>
+  <div class="box">集中力がない</div>
+  <div class="box">落ち着きがない</div>
+  <div class="box">他者とのかかわりが苦手</div>
 </div>
-
-<!-- 丸 -->
+  
 <div class="circle-container">
-  <div class="circle">安心</div>
-  <div class="circle">信頼</div>
-  <div class="circle">成長</div>
+  <div class="circle">保育士</div>
+  <div class="circle">言語<br>聴覚士</div>
+  <div class="circle">理学<br>療法士</div>
+  <div class="circle">作業<br>療法士</div>
+  <div class="circle">公認<br>心理士</div>
 </div>
-
-<!-- intro -->
-<div class="intro">
-  お子さま一人ひとりの特性に合わせた支援を行っています
-</div>
+  
+<section class="intro">
+  <p>多様な専門職が在籍。経験豊富なスタッフが、<br>お子様の特性に合わせた最適な対応を致します！</p>
+</section>
+  
+<section class="intro2">
+  <p>生活面での不安や集団活動での悩み、<br>コミュニケーションや感覚面のサポートも行っています。</p>
+</section>
   
 <div class="toggle-container流れ">
   <button class="toggle-button流れ" onclick="toggleContent流れ()">ご利用開始までの流れ</button>
