--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@ body {
   margin: 0;
 }
 
-.background-image {
-  position: fixed;
-  inset: 0;
-  background: url("がぞー.png") center/cover no-repeat;
-  z-index: -1;
-  opacity: 0.7;
-}
-
 /* ------------------ ヘッダー ------------------ */
 header {
   background-color: rgba(169,169,169,0.5);
@@ -342,7 +334,7 @@ footer {
 <div class="toggle-container流れ">
   <button class="toggle-button流れ" onclick="toggleContent流れ()">ご利用開始までの流れ</button>
   <div id="content流れ" class="content流れ">
-    <img src="ご利用の流れ.jpg">
+    <img src="ご利用の流れ.png">
   </div>
 </div>
 
