--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@ header {
     border-radius: 8px;
   }
 }
+  @media (min-width: 481px) {
+  .toggle-button流れ,
+  .toggle-button料金 {
+    display: none;
+  }
+}
 
 /* ------------------ アクセス ------------------ */
 .access-section {
