--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ header {
 /* ------------------ トグル ------------------ */
 /* PC用タイトル */
 .pc-title {
-  display: none;
+  display: block;
   text-align: center;
   font-size: 1.8em;
   margin: 20px 0 15px;
