--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ header {
   text-align: center;
   font-size: 1.8em;
   margin: 20px 0 15px;
-  font-family: 'Kiwi Maru', cursive;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   color: #9F987D;
 }
 
