--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ footer {
 
 <section class="access-section" id="access">
   <h2>アクセス</h2>
-  <p class="access-text">〒950-0861<br>新潟県新潟市東区中山6-19-5</p>
+  <p class="access-text">〒950-0861<br>新潟県新潟市東区中山6-19-5　ウェル新潟ビル206</p>
   <div class="map-wrapper">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.6605220127058!2d139.08114867535681!3d37.91499690407121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff4ca2b14fe7561%3A0x41f87e9442edc71f!2z44CSOTUwLTA4NjEg5paw5r2f55yM5paw5r2f5biC5p2x5Yy65Lit5bGx77yW5LiB55uu77yR77yZ4oiS77yVIOOCpuOCp-ODq-aWsOa9nw!5e0!3m2!1sja!2sjp!4v1766382089719!5m2!1sja!2sjp"
