--- a/index.html
+++ b/index.html
@@ -465,6 +465,20 @@ footer {
   <img src="お子さまのお困りごとありませんか.png">
 </div>
 
+<div class="slider-section">
+
+  <button class="slide-arrow left">‹</button>
+
+  <div class="slider">
+    <img src="景色1.jpg" alt="">
+    <img src="景色2.jpg" alt="">
+    <img src="景色3.jpg" alt="">
+  </div>
+
+  <button class="slide-arrow right">›</button>
+
+</div>
+  
 <!-- ボックス -->
 <div class="box-container">
   <div class="box">言葉の遅れが気になる</div>
