--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@ footer {
 </section>
  
  <div class="toggle-container流れ">
+    <h2 class="pc-title">ご利用開始までの流れ</h2>
       <button class="toggle-button流れ" onclick="toggleContent流れ()"> ご利用開始までの流れ
         <span id="arrow流れ">∨</span>
       </button>
@@ -515,6 +516,7 @@ footer {
     </div>
     
     <div class="toggle-container料金">
+      <h2 class="pc-title">ご利用料金について</h2>
       <button class="toggle-button料金" onclick="toggleContent料金()"> ご利用料金
         <span id="arrow料金">∨</span>
       </button>
