--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ footer {
         <span id="arrow流れ">∨</span>
       </button>
       <div id="content流れ" class="content流れ">
-        <img src="ご利用の流れ.jpg" alt="ご利用開始までの流れ">
+        <img src="ご利用の流れ.png" alt="ご利用開始までの流れ">
       </div>
     </div>
     
