--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ footer {
         <span id="arrow料金">∨</span>
       </button>
       <div id="content料金" class="content料金">
-        <img src="料金.jpg" alt="ご利用料金">
+        <img src="料金.png" alt="ご利用料金">
       </div>
     </div>
 
