--- a/index.html
+++ b/index.html
@@ -463,21 +463,28 @@ header {
   background: rgba(255,255,255,0.75);
   border-radius: 20px;
   text-align: center;
-}
-  /* ===== セクションタイトル マーカー（PC） ===== */
-.section-title {
-  display: inline-block;
   font-size: 1.8em;
   font-family: 'M PLUS Rounded 1c', sans-serif;
   color: #9F987D;
-  padding: 0 6px;
-  background: linear-gradient(
-    transparent 60%,
-    rgba(169,169,169,0.4) 60%
+  position: relative;
+  display: inline-block;
+}
+  
+.access-section::before {
+  content: "";
+  position: absolute;
+  left: -6px;
+  bottom: 6px;
+  width: 100%;
+  height: 0.6em;
+  background: rgba(159,152,125,0.25);
+  z-index: -1;
+  border-radius: 4px;
   );
 }
 
 .access-text {
+  position: relative;
   text-align: left;
   max-width: 550px;
   margin: 0 auto 20px;
