--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ footer {
   <div class="circle">言語<br>聴覚士</div>
   <div class="circle">理学<br>療法士</div>
   <div class="circle">作業<br>療法士</div>
-  <div class="circle">公認<br>心理士</div>
+  <div class="circle">公認<br>心理師</div>
 </div>
   
 <section class="intro">
