--- a/index.html
+++ b/index.html
@@ -462,12 +462,12 @@ header {
   padding: 25px;
   background: rgba(255,255,255,0.75);
   border-radius: 20px;
-  text-align: center;
+
+  text-align: left;          /* ← 中身は左基準に */
   font-size: 1.8em;
   font-family: 'M PLUS Rounded 1c', sans-serif;
   color: #9F987D;
   position: relative;
-  display: inline-block;
 }
   
 .access-section::before {
