--- a/index.html
+++ b/index.html
@@ -462,31 +462,31 @@ header {
   padding: 25px;
   background: rgba(255,255,255,0.75);
   border-radius: 20px;
-  text-align: left;
   font-family: 'M PLUS Rounded 1c', sans-serif;
   color: #9F987D;
 }
 
-/* タイトル */
+/* タイトル（ご利用料金と揃える） */
 .access-title {
+  width: 100%;
   text-align: center;
   font-size: 1.8em;
-  margin-bottom: 25px;
+  margin: 0 0 25px;
   position: relative;
   display: inline-block;
 }
 
-/* タイトル下マーカー */
+/* タイトル用マーカー */
 .access-title::before {
   content: "";
   position: absolute;
-  left: 0;
+  left: -6px;
   bottom: 6px;
   width: 100%;
   height: 0.6em;
   background: rgba(159,152,125,0.25);
   z-index: -1;
-  border-radius: 6px;
+  border-radius: 4px;
 }
 
 /* 住所 */
@@ -659,10 +659,7 @@ footer {
 
 <section class="access-section" id="access">
   <h2 class="access-title">アクセス</h2>
-  <p class="access-text">
-    〒950-0861<br>
-    新潟県新潟市東区中山6-19-5　ウェル新潟ビル206
-  </p>
+  <p class="access-text">〒950-0861<br>新潟県新潟市東区中山6-19-5　ウェル新潟ビル206</p>
 
   <div class="map-wrapper">
     <iframe
