--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
 
-  <title>発達支援ノワール</title>
+  <title>発達支援ノワール - 新潟市の放課後等デイサービス・児童発達支援</title>
 
 <style>
 /* ------------------ 共通 ------------------ */
@@ -364,7 +364,7 @@ header {
 }
 
   .pc-title::before {
-  content: "";
+ content: "";
   position: absolute;
   left: -6px;
   bottom: 6px;
