--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@ body {
   color: #9F987D;
   margin: 0;
 }
+   .background-image {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url("がぞー.png");
+        background-size: cover;
+        background-position: center;
+        z-index: -1; opacity: 0.7;
+      }
 
 /* ------------------ ヘッダー ------------------ */
 header {
